--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
     "version": "1.0.0-dev",
     "private": true,
     "author": "Makina Corpus",
+    "main": "resources/index.js",
+    "repository": "https://github.com/makinacorpus/drupal-calista.git",
     "license": "GPL-2",
     "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-clean-css": "^3.0.4",
-        "gulp-less": "^3.3.0",
-        "gulp-rename": "^1.2.2"
+        "@types/jquery": "^2.0.41",
+        "clean-webpack-plugin": "^0.1.16",
+        "css-loader": "^0.28.7",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "file-loader": "^0.11.2",
+        "jshint": "^2.9.5",
+        "jshint-loader": "^0.8.4",
+        "less": "^2.7.2",
+        "less-loader": "^4.0.5",
+        "style-loader": "^0.18.2",
+        "ts-loader": "^2.3.4",
+        "typescript": "^2.4.2",
+        "webpack": "^3.4.1"
     }
 }
