--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "style-loader": "^0.18.2",
         "ts-loader": "^2.3.4",
         "typescript": "^2.4.2",
+        "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
         "webpack": "^3.4.1"
     }
 }
