--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "license": "GPL-2",
     "devDependencies": {
         "@types/jquery": "^2.0.41",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-minify-webpack-plugin": "^0.2.0",
+        "babel-preset-env": "^1.6.1",
         "clean-webpack-plugin": "^0.1.16",
+        "core.js": "^0.4.2",
         "css-loader": "^0.28.7",
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^0.11.2",
-        "jshint": "^2.9.5",
-        "jshint-loader": "^0.8.4",
         "less": "^2.7.2",
         "less-loader": "^4.0.5",
         "style-loader": "^0.18.2",
         "ts-loader": "^2.3.4",
         "typescript": "^2.4.2",
-        "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
-        "webpack": "^3.4.1"
+        "webpack": "^3.8.1"
     }
 }
