--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,12 @@
     "prefer-stable": true,
     "require": {
         "makinacorpus/php-calista": "^1",
-        "makinacorpus/drupal-sf-dic": ">=3.2.8",
+        "makinacorpus/drupal-sf-dic": "^3.2.8 || ^4",
         "php": ">=5.5",
-        "symfony/dependency-injection": "^3.2",
-        "symfony/event-dispatcher": "^3.1",
-        "symfony/http-foundation": "^3.1",
-        "symfony/property-info": "^3.2"
+        "symfony/dependency-injection": "^3.2 || ^4",
+        "symfony/event-dispatcher": "^3.1 || ^4",
+        "symfony/http-foundation": "^3.1 || ^4",
+        "symfony/property-info": "^3.2 || ^4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.1"
