--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "makinacorpus/drupal-calista",
     "description": "Advanced dashboard/list API for Drupal using makinacorpus/drupal-calista",
     "type": "drupal-module",
-    "license": "GPL-2",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Lonny Loquesol",
