symfony 4 compatiblity fix

--- a/config/drupal.yml
+++ b/config/drupal.yml
@@ -2,6 +2,7 @@ services:
 
   # Context pane
   calista.context:
+    public: true
     class: MakinaCorpus\Drupal\Calista\Context\ContextPane
     arguments: ['@event_dispatcher', '@request_stack']
 
